--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
     buildToolsVersion project.BUILD_TOOLS_VERSION
 
     defaultConfig {
-        applicationId 'com.ls.drupalconapp'
+        applicationId 'io.anagraph.g2016app'
         minSdkVersion Integer.parseInt(project.MIN_SDK_VERSION)
         targetSdkVersion Integer.parseInt(project.TARGET_SDK_VERSION)
         versionCode Integer.parseInt(project.VERSION_CODE)
@@ -30,10 +30,10 @@ android {
     }
     signingConfigs {
         config {
-            keyAlias 'drupalcon'
-            keyPassword 'lembergsolutions'
-            storeFile file('keystore/keystore.keystore')
-            storePassword 'lembergsolutions'
+            keyAlias 'g2016'
+            keyPassword 'anagraph'
+            storeFile file('keystore/anagraph.jks')
+            storePassword 'anagraph'
         }
     }
     buildTypes {
